--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
 
   # MySQL база данных
   mysql:
-    image: mysql:9.1
+    image: mysql:8.4
     container_name: 42k_mysql
     ports:
       - "3306:3306"
@@ -49,8 +49,8 @@ services:
       - mysql_logs:/var/log/mysql
       - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
     environment:
-      - MYSQL_DATABASE=${DB_DATABASE:-l42k}
-      - MYSQL_USER=${DB_USERNAME:-l42k_user}
+      - MYSQL_DATABASE=${DB_DATABASE:-run_app}
+      - MYSQL_USER=${DB_USERNAME:-laravel}
       - MYSQL_PASSWORD=${DB_PASSWORD:-secret}
       - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD:-root}
     networks:
