feat: добавлено кастомное правило PHPStan для DDD архитектуры
- Создано правило NoIlluminateInDomainAndApplicationRule
- Автоматически запрещает use Illuminate\* в Domain и Application слоях
- Правило проверяет только файлы в app/*/Domain и app/*/Application
- Выдает понятное сообщение об архитектурном нарушении
- Зарегистрировано в phpstan.neon через rules и services
- Добавлена автозагрузка PHPStanRules\ в composer.json
- Протестировано: правило успешно ловит нарушения
- Обновлены комментарии в phpstan.neon про автоматическую проверку

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -34,7 +34,8 @@ parameters:
     #   - Разрешено: всё, включая Laravel компоненты
     #
     # ⚠️  ВАЖНО: Следите за соблюдением этих правил при code review!
-    # Для автоматической проверки архитектурных зависимостей рекомендуется deptrac
+    # ✅ АВТОМАТИЧЕСКАЯ ПРОВЕРКА включена через кастомное правило PHPStan
+    # Файл: phpstan-rules/NoIlluminateInDomainAndApplicationRule.php
     
     # Строгие правила от phpstan-strict-rules:
     # - Запрет empty() - используйте явные проверки
@@ -54,4 +55,13 @@ parameters:
             paths:
                 - config/app.php
                 - config/database.php
+
+rules:
+    - PHPStanRules\NoIlluminateInDomainAndApplicationRule
+
+services:
+    -
+        class: PHPStanRules\NoIlluminateInDomainAndApplicationRule
+        tags:
+            - phpstan.rules.rule
 
