fix: добавлена директория phpstan-rules в анализируемые пути
- Исправлено предупреждение PHPStan о некорректном кеше
- Теперь phpstan-rules включена в paths для анализа
- Кеш будет автоматически обновляться при изменении правил

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,28 +7,29 @@ parameters:
         - app
         - config
         - database
+        - phpstan-rules
     excludePaths:
         - vendor
         - storage
         - bootstrap/cache
         - routes
-    
+
     # АРХИТЕКТУРНЫЕ ПРАВИЛА (DDD Clean Architecture):
-    # 
+    #
     # Domain слой (app/*/Domain/*):
     #   - Только чистая бизнес-логика
     #   - ЗАПРЕЩЕНО: use Illuminate\*, use Facades, use DB, use Request и т.д.
     #   - Разрешено: Value Objects, Entities, Domain Events, Exceptions
-    # 
+    #
     # Application слой (app/*/Application/*):
     #   - UseCases, Actions, DTOs, Commands, Queries
     #   - ЗАПРЕЩЕНО: use Illuminate\*, прямая работа с БД, HTTP
     #   - Разрешено: использование Domain слоя, интерфейсов репозиториев
-    # 
+    #
     # Infrastructure слой (app/*/Infrastructure/*):
     #   - Реализации репозиториев, внешние API, парсеры
     #   - Разрешено: Eloquent, Query Builder, внешние пакеты
-    # 
+    #
     # UI слой (app/*/UI/*):
     #   - Controllers, Requests, Resources, Middleware
     #   - Разрешено: всё, включая Laravel компоненты
@@ -36,13 +37,13 @@ parameters:
     # ⚠️  ВАЖНО: Следите за соблюдением этих правил при code review!
     # ✅ АВТОМАТИЧЕСКАЯ ПРОВЕРКА включена через кастомное правило PHPStan
     # Файл: phpstan-rules/NoIlluminateInDomainAndApplicationRule.php
-    
+
     # Строгие правила от phpstan-strict-rules:
     # - Запрет empty() - используйте явные проверки
     # - Запрет неявных преобразований типов в условиях
     # - Требование явных сравнений: === null, !== [], > 0
     reportUnmatchedIgnoredErrors: false
-    
+
     # Исключения для стандартного кода Laravel
     ignoreErrors:
         # Игнорируем PHPDoc типы в Laravel моделях (стандартное поведение)
