--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "main" ]
     paths-ignore:
       - "README.md"
+      - "CHANGELOG.md"
       - ".github/ISSUE_TEMPLATE/**"
 
 permissions:
