--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -57,6 +57,15 @@ jobs:
             composer-${{ runner.os }}-
       - name: Composer install
         run: composer install --no-interaction --no-progress --prefer-dist
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
+      - name: Install npm dependencies
+        run: npm ci
+      - name: Build frontend
+        run: npm run build
       - name: App key for tests
         run: |
           [ -f .env ] || cp .env.example .env
