--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -176,6 +176,9 @@ jobs:
             export APP_TAG="${GITHUB_REF_NAME}"
             export WEB_TAG="${GITHUB_REF_NAME}"
 
+            # Останавливаем старые контейнеры
+            docker compose -f docker-compose.prod.yml down || true
+
             APP_TAG="$APP_TAG" WEB_TAG="$WEB_TAG" docker compose -f docker-compose.prod.yml pull
             APP_TAG="$APP_TAG" WEB_TAG="$WEB_TAG" docker compose -f docker-compose.prod.yml up -d --remove-orphans
             docker compose -f docker-compose.prod.yml ps
