--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,24 +22,23 @@ jobs:
     name: PHP tests
     runs-on: ubuntu-latest
     services:
-      mysql:
-        image: mysql:8.4
+      postgres:
+        image: postgres:16-alpine
         env:
-          MYSQL_ROOT_PASSWORD: secret
-          MYSQL_DATABASE: run_app_test
-          MYSQL_USER: app
-          MYSQL_PASSWORD: secret
-        ports: [ 3306:3306 ]
+          POSTGRES_DB: run_app_test
+          POSTGRES_USER: laravel
+          POSTGRES_PASSWORD: secret
+        ports: [ 5432:5432 ]
         options: >-
-          --health-cmd="mysqladmin ping -h 127.0.0.1 -u root -psecret"
+          --health-cmd="pg_isready -U laravel"
           --health-interval=10s --health-timeout=5s --health-retries=5
     env:
       APP_ENV: testing
-      DB_CONNECTION: mysql
+      DB_CONNECTION: pgsql
       DB_HOST: 127.0.0.1
-      DB_PORT: 3306
+      DB_PORT: 5432
       DB_DATABASE: run_app_test
-      DB_USERNAME: app
+      DB_USERNAME: laravel
       DB_PASSWORD: secret
     timeout-minutes: 15
     steps:
@@ -47,7 +46,7 @@ jobs:
       - uses: shivammathur/setup-php@v2
         with:
           php-version: "8.4"
-          extensions: mbstring, intl, redis, pdo_mysql
+          extensions: mbstring, intl, redis, pdo_pgsql
       - name: Cache Composer
         uses: actions/cache@v4
         with:
