--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
     "require": {
         "php": "^8.4",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "symfony/uid": "^7.3",
+        "webmozart/assert": "^1.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -25,6 +27,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "RunTracker\\": "src/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
