--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -94,6 +94,17 @@ jobs:
           username: ${{ secrets.GHCR_USERNAME }}
           password: ${{ secrets.GHCR_TOKEN }}
 
+      # Нормализуем тег релиза для docker
+      - name: Compute SAFE_TAG
+        if: startsWith(github.ref, 'refs/tags/')
+        id: tag
+        shell: bash
+        run: |
+          RAW="${GITHUB_REF_NAME}"
+          SAFE=$(printf "%s" "$RAW" | tr '[:upper:]' '[:lower:]' | sed -E 's/[^a-z0-9._-]+/-/g')
+          echo "safe=$SAFE" >> "$GITHUB_OUTPUT"
+          echo "SAFE_TAG=$SAFE"
+
       # APP: всегда пушим :sha
       - name: Build & push APP (:sha)
         uses: docker/build-push-action@v6
@@ -102,12 +113,13 @@ jobs:
           file: docker/production/Dockerfile
           target: prod
           push: true
+          platforms: linux/amd64
           cache-from: type=gha,scope=app
           cache-to: type=gha,mode=max,scope=app
           tags: ${{ env.IMAGE_NAME }}:app-${{ github.sha }}
 
-      # APP: на тегах пушим :version и :latest
-      - name: Build & push APP (:version, :latest)
+      # APP: на тегах пушим :version(safe) и :latest
+      - name: Build & push APP (:version-safe, :latest)
         if: startsWith(github.ref, 'refs/tags/')
         uses: docker/build-push-action@v6
         with:
@@ -115,10 +127,11 @@ jobs:
           file: docker/production/Dockerfile
           target: prod
           push: true
+          platforms: linux/amd64
           cache-from: type=gha,scope=app
           cache-to: type=gha,mode=max,scope=app
           tags: |
-            ${{ env.IMAGE_NAME }}:app-${{ github.ref_name }}
+            ${{ env.IMAGE_NAME }}:app-${{ steps.tag.outputs.safe }}
             ${{ env.IMAGE_NAME }}:app-latest
 
       # WEB: всегда пушим :sha
@@ -129,12 +142,13 @@ jobs:
           file: docker/production/Dockerfile
           target: web
           push: true
+          platforms: linux/amd64
           cache-from: type=gha,scope=web
           cache-to: type=gha,mode=max,scope=web
           tags: ${{ env.IMAGE_NAME }}:web-${{ github.sha }}
 
-      # WEB: на тегах пушим :version и :latest
-      - name: Build & push WEB (:version, :latest)
+      # WEB: на тегах пушим :version(safe) и :latest
+      - name: Build & push WEB (:version-safe, :latest)
         if: startsWith(github.ref, 'refs/tags/')
         uses: docker/build-push-action@v6
         with:
@@ -142,10 +156,11 @@ jobs:
           file: docker/production/Dockerfile
           target: web
           push: true
+          platforms: linux/amd64
           cache-from: type=gha,scope=web
           cache-to: type=gha,mode=max,scope=web
           tags: |
-            ${{ env.IMAGE_NAME }}:web-${{ github.ref_name }}
+            ${{ env.IMAGE_NAME }}:web-${{ steps.tag.outputs.safe }}
             ${{ env.IMAGE_NAME }}:web-latest
 
   deploy:
@@ -163,25 +178,37 @@ jobs:
           username: ${{ secrets.PROD_SSH_USER }}
           key:      ${{ secrets.PROD_SSH_KEY }}
           command_timeout: 20m
-          envs: GITHUB_REF_NAME
+          envs: GITHUB_SHA,GITHUB_REF_NAME
           script: |
             set -euo pipefail
             cd /opt/run-app
 
             echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u "${{ secrets.GHCR_USERNAME }}" --password-stdin
 
+            # ===== Основной режим: деплоим immutable-образами по SHA =====
+            export APP_TAG="${GITHUB_SHA}"
+            export WEB_TAG="${GITHUB_SHA}"
+
+            APP_IMAGE_SHA="ghcr.io/arzamaskov/runtracker:app-${APP_TAG}"
+            WEB_IMAGE_SHA="ghcr.io/arzamaskov/runtracker:web-${WEB_TAG}"
+            echo "Deploy by SHA:"
+            echo "  $APP_IMAGE_SHA"
+            echo "  $WEB_IMAGE_SHA"
+
+            # Preflight: удостоверимся, что такие теги есть
+            docker manifest inspect "$APP_IMAGE_SHA" >/dev/null || { echo "MISSING: $APP_IMAGE_SHA"; exit 1; }
+            docker manifest inspect "$WEB_IMAGE_SHA" >/dev/null || { echo "MISSING: $WEB_IMAGE_SHA"; exit 1; }
+
+            # На всякий случай валидируем compose
             docker compose -f docker-compose.prod.yml config -q
 
-            export APP_TAG="${GITHUB_REF_NAME}"
-            export WEB_TAG="${GITHUB_REF_NAME}"
-
-            # Останавливаем старые контейнеры
+            # Останавливаем старые контейнеры и поднимаем новые
             docker compose -f docker-compose.prod.yml down || true
-
             APP_TAG="$APP_TAG" WEB_TAG="$WEB_TAG" docker compose -f docker-compose.prod.yml pull
             APP_TAG="$APP_TAG" WEB_TAG="$WEB_TAG" docker compose -f docker-compose.prod.yml up -d --remove-orphans
             docker compose -f docker-compose.prod.yml ps
 
+            # Мейнтенанс/миграции/кэш
             docker compose -f docker-compose.prod.yml exec -T app php artisan down || true
             docker compose -f docker-compose.prod.yml exec -T app php artisan migrate --force
             docker compose -f docker-compose.prod.yml exec -T app php artisan optimize:clear
