--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -83,12 +83,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [tests]
     timeout-minutes: 30
+    env:
+      CACHE_APP: ${{ env.IMAGE_NAME }}:cache-app
+      CACHE_WEB: ${{ env.IMAGE_NAME }}:cache-web
     steps:
       - uses: actions/checkout@v4
-
-      # multi-arch на будущее (можно удалить, если не нужно)
-      - name: Setup QEMU
-        uses: docker/setup-qemu-action@v3
 
       - name: Setup Buildx
         uses: docker/setup-buildx-action@v3
@@ -119,9 +118,12 @@ jobs:
           file: docker/production/Dockerfile
           target: prod
           push: true
-          platforms: linux/amd64,linux/arm64
-          cache-from: type=gha,scope=app
-          cache-to: type=gha,mode=max,scope=app
+          cache-from: |
+            type=registry,ref=${{ env.CACHE_APP }}
+            type=gha,scope=app
+          cache-to: |
+            type=registry,ref=${{ env.CACHE_APP }},mode=max,compression=zstd
+            type=gha,mode=max,scope=app
           tags: ${{ env.IMAGE_NAME }}:app-${{ github.sha }}
 
       - name: Verify APP :sha exists
@@ -136,9 +138,12 @@ jobs:
           file: docker/production/Dockerfile
           target: prod
           push: true
-          platforms: linux/amd64,linux/arm64
-          cache-from: type=gha,scope=app
-          cache-to: type=gha,mode=max,scope=app
+          cache-from: |
+            type=registry,ref=${{ env.CACHE_APP }}
+            type=gha,scope=app
+          cache-to: |
+            type=registry,ref=${{ env.CACHE_APP }},mode=max,compression=zstd
+            type=gha,mode=max,scope=app
           tags: |
             ${{ env.IMAGE_NAME }}:app-${{ steps.tag.outputs.safe }}
             ${{ env.IMAGE_NAME }}:app-latest
@@ -151,9 +156,12 @@ jobs:
           file: docker/production/Dockerfile
           target: web
           push: true
-          platforms: linux/amd64,linux/arm64
-          cache-from: type=gha,scope=web
-          cache-to: type=gha,mode=max,scope=web
+          cache-from: |
+            type=registry,ref=${{ env.CACHE_WEB }}
+            type=gha,scope=web
+          cache-to: |
+            type=registry,ref=${{ env.CACHE_WEB }},mode=max,compression=zstd
+            type=gha,mode=max,scope=web
           tags: ${{ env.IMAGE_NAME }}:web-${{ github.sha }}
 
       - name: Verify WEB :sha exists
@@ -168,9 +176,12 @@ jobs:
           file: docker/production/Dockerfile
           target: web
           push: true
-          platforms: linux/amd64,linux/arm64
-          cache-from: type=gha,scope=web
-          cache-to: type=gha,mode=max,scope=web
+          cache-from: |
+            type=registry,ref=${{ env.CACHE_WEB }}
+            type=gha,scope=web
+          cache-to: |
+            type=registry,ref=${{ env.CACHE_WEB }},mode=max,compression=zstd
+            type=gha,mode=max,scope=web
           tags: |
             ${{ env.IMAGE_NAME }}:web-${{ steps.tag.outputs.safe }}
             ${{ env.IMAGE_NAME }}:web-latest
