fix(deploy): исправления для продакшн деплоя
- Настроена модель User для UUID и схемы identity
- Исправлена миграция sessions (foreignUuid вместо foreignId)
- Обновлен config/auth.php для identity.password_reset_tokens
- Удалены неиспользуемые драйверы очередей (background, deferred)
- Выровнена сборка фронтенда на pnpm (Dockerfile + CI)
- Добавлен landing.js в vite.config.js
- Добавлен healthcheck endpoint в nginx
- Обновлена UserFactory для генерации UUID

--- a/docker/nginx/production.conf
+++ b/docker/nginx/production.conf
@@ -7,6 +7,7 @@ server {
     index index.php index.html;
 
     charset utf-8;
+    client_max_body_size 64M;
 
     # Логи в stdout/stderr для Docker
     access_log /dev/stdout;
@@ -61,6 +62,12 @@ server {
         log_not_found off;
     }
 
+    # Healthcheck endpoint
+    location /health-check {
+        access_log off;
+        return 200 "OK\n";
+        add_header Content-Type text/plain;
+    }
+
     error_page 404 /index.php;
 }
-
