--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -60,11 +60,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'npm'
-      - name: Install npm dependencies
-        run: npm ci
+          cache: 'pnpm'
+      - name: Install pnpm dependencies
+        run: corepack enable && pnpm install --frozen-lockfile
       - name: Build frontend
-        run: npm run build
+        run: pnpm run build
       - name: App key for tests
         run: |
           [ -f .env ] || cp .env.example .env
