--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -9,6 +9,7 @@ server {
     # Кодировка UTF-8 для поддержки кириллицы
     charset utf-8;
     charset_types text/xml text/plain text/vnd.wap.wml application/javascript application/rss+xml;
+    client_max_body_size 64M;
 
     # Не объединять слеши для корректной работы с кириллическими путями
     merge_slashes off;
@@ -38,7 +39,8 @@ server {
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
+        set $php_upstream php-fpm:9000;
+        fastcgi_pass $php_upstream;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
@@ -51,9 +53,16 @@ server {
         fastcgi_param QUERY_STRING $query_string;
     }
 
+    # Используем динамическое разрешение имени для upstream'ов (php/node)
+    resolver 127.0.0.11 ipv6=off;
+
+    # Простой эндпоинт для healthcheck, не зависит от PHP
+    location = /healthz { return 200; }
+
     # Vite HMR (Hot Module Replacement)
     location /vite-hmr {
-        proxy_pass http://node:5173;
+        set $vite_upstream node:5173;
+        proxy_pass http://$vite_upstream;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
