--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -12,6 +12,7 @@ RUN apk add --no-cache --virtual .build-deps \
         libpng-dev \
         libxml2-dev \
         libzip-dev \
+        linux-headers \
         make \
         oniguruma-dev \
         pcre-dev \
@@ -49,6 +50,9 @@ RUN apk add --no-cache --virtual .build-deps \
     # Установка Redis через PECL
     && pecl install redis \
     && docker-php-ext-enable redis \
+    # Установка Xdebug через PECL (для разработки)
+    && pecl install xdebug \
+    && docker-php-ext-enable xdebug \
     # Очистка: удаление build-зависимостей и кеша
     && apk del .build-deps \
     && rm -rf /tmp/pear \
@@ -58,7 +62,8 @@ RUN apk add --no-cache --virtual .build-deps \
 COPY --from=composer:2.8 /usr/bin/composer /usr/bin/composer
 
 # Настройка PHP
-COPY docker/php/php.ini /usr/local/etc/php/conf.d/custom.ini
+COPY docker/php-fpm/php.ini /usr/local/etc/php/conf.d/custom.ini
+COPY docker/php-fpm/xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
 
 # Создание пользователя
 RUN addgroup -g 1000 laravel && adduser -D -u 1000 -G laravel laravel
