--- a/composer.json
+++ b/composer.json
@@ -11,27 +11,27 @@
         "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
+        "deptrac/deptrac": "^4.2",
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.8",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "phpstan/phpstan": "^2.1",
-        "phpstan/phpstan-strict-rules": "^2.0",
         "phpunit/phpunit": "^11.5.3"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "RunTracker\\": "src/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/",
-            "PHPStanRules\\": "phpstan-rules/"
+            "Tests\\": "tests/"
         }
     },
     "scripts": {
