--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,62 +1,10 @@
 includes:
-    - vendor/phpstan/phpstan-strict-rules/rules.neon
+    - vendor/larastan/larastan/extension.neon
 
 parameters:
-    level: 5
     paths:
         - app
-        - config
-        - database
-    excludePaths:
-        - vendor
-        - storage
-        - bootstrap/cache
-        - routes
-        - phpstan-rules
+        - src
 
-    # АРХИТЕКТУРНЫЕ ПРАВИЛА (DDD Clean Architecture):
-    #
-    # Domain слой (app/*/Domain/*):
-    #   - Только чистая бизнес-логика
-    #   - ЗАПРЕЩЕНО: use Illuminate\*, use Facades, use DB, use Request и т.д.
-    #   - Разрешено: Value Objects, Entities, Domain Events, Exceptions
-    #
-    # Application слой (app/*/Application/*):
-    #   - UseCases, Actions, DTOs, Commands, Queries
-    #   - ЗАПРЕЩЕНО: use Illuminate\*, прямая работа с БД, HTTP
-    #   - Разрешено: использование Domain слоя, интерфейсов репозиториев
-    #
-    # Infrastructure слой (app/*/Infrastructure/*):
-    #   - Реализации репозиториев, внешние API, парсеры
-    #   - Разрешено: Eloquent, Query Builder, внешние пакеты
-    #
-    # UI слой (app/*/UI/*):
-    #   - Controllers, Requests, Resources, Middleware
-    #   - Разрешено: всё, включая Laravel компоненты
-    #
-    # ⚠️  ВАЖНО: Следите за соблюдением этих правил при code review!
-    # ✅ АВТОМАТИЧЕСКАЯ ПРОВЕРКА включена через кастомное правило PHPStan
-    # Файл: phpstan-rules/NoIlluminateInDomainAndApplicationRule.php
-
-    # Строгие правила от phpstan-strict-rules:
-    # - Запрет empty() - используйте явные проверки
-    # - Запрет неявных преобразований типов в условиях
-    # - Требование явных сравнений: === null, !== [], > 0
-    reportUnmatchedIgnoredErrors: false
-
-    # Исключения для стандартного кода Laravel
-    ignoreErrors:
-        # Игнорируем PHPDoc типы в Laravel моделях (стандартное поведение)
-        -
-            message: '#PHPDoc type .* of property .* is not the same as PHPDoc type#'
-            path: app/Models/*
-        # Игнорируем array_filter в конфигах Laravel (стандартный код)
-        -
-            message: '#Call to function array_filter\(\) requires parameter#'
-            paths:
-                - config/app.php
-                - config/database.php
-
-rules:
-    - PHPStanRules\NoIlluminateInDomainAndApplicationRule
-
+    # Уровень строгости: 0–9 (чем выше, тем строже)
+    level: 6
